<resources>
    <string name="app_name">TrustMe</string>
    <string name="loading">로딩중</string>
    <string name="noti">알림</string>
    <string name="unkown_error">알 수 없는 오류가\n발생했습니다.</string>
    <string name="ok">확인</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="permissions_not_granted_message">카메라,저장소 권한 요청이\n거절되었습니다.</string>
    <string name="permissions_storage_not_granted_message">저장소 권한 요청이\n거절되었습니다.</string>
    <string name="str_crop">자르기</string>
    <string name="str_rotate">회전</string>
    <string name="str_complete">완료</string>
    <string name="str_one_to_one">1:1</string>
    <string name="str_four_to_three">4:3</string>
    <string name="str_three_to_four">3:4</string>
    <string name="str_write">글쓰기</string>
    <string name="str_cancel">취소</string>
    <string name="str_input">입력하기</string>
    <string name="str_please_input_store_name">상점명을 입력해주세요</string>
    <string name="str_please_input_goods_name">상품명을 입력해주세요</string>
    <string name="str_please_input_review">상품에 대한 리뷰를 입력해주세요</string>
    <string name="str_check_img_edit_message">편집한 내용이 사려져요. 그래도 나가시겠어요?</string>
    <string name="str_left">나가기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>