<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cropOptionTopCl"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_ff252525"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/cropOptionBackButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_left_arrow"
                android:paddingStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/cropOptionCompleteButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:text="@string/str_complete"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/cropOptionImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cropOptionTopCl"
            app:layout_constraintBottom_toTopOf="@+id/cropOptionBottomCl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cropOptionBottomCl"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/color_ff252525"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/cropOptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_crop_stroke_24"
                app:layout_constraintEnd_toStartOf="@+id/rotateOptionButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cropOptionTv"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/cropOptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:text="@string/str_crop"
                app:layout_constraintTop_toBottomOf="@+id/cropOptionButton"
                app:layout_constraintStart_toStartOf="@+id/cropOptionButton"
                app:layout_constraintEnd_toEndOf="@+id/cropOptionButton"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/rotateOptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/cropOptionButton"
                android:src="@drawable/ic_lotate_stroke_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rotateOptionTv"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/rotateOptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rotateOptionButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rotateOptionButton"
                app:layout_constraintEnd_toEndOf="@+id/rotateOptionButton"
                android:text="@string/str_rotate"
                android:textColor="@color/white"
                android:textSize="10sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>